# docs/swagger.json
@@ -1,8 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Это пример API для работы с пользовательскими данными.",
-        "title": "Swagger Example API",
+        "description": "Это API для работы с пользовательскими данными BASFI.",
+        "title": "Swagger index BASFI API",
         "contact": {},
         "version": "1.0"
     },
@@ -11,23 +11,26 @@
     "paths": {
         "/resultUser": {
             "get": {
-                "description": "Вычисляет среднее значение сохраненных чисел",
+                "description": "Возвращает все расчеты BASFI, если данные были добавлены",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Пользовательские данные"
                 ],
-                "summary": "Получить среднее значение",
+                "summary": "Получение всех расчетов BASFI",
                 "responses": {
                     "200": {
-                        "description": "Среднее значение",
+                        "description": "Все расчеты BASFI",
                         "schema": {
-                            "$ref": "#/definitions/main.AverageResult"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/main.AverageResult"
+                            }
                         }
                     },
                     "404": {
-                        "description": "Ошибка: Числа не найдены",
+                        "description": "Ошибка: Данные не найдены",
                         "schema": {
                             "$ref": "#/definitions/main.ResponseError"
                         }
@@ -37,7 +40,7 @@
         },
         "/userData": {
             "post": {
-                "description": "Сохраняет массив из 10 чисел",
+                "description": "Сохраняет данные пользователя и возвращает расчет BASFI",
                 "consumes": [
                     "application/json"
                 ],
@@ -47,7 +50,7 @@
                 "tags": [
                     "Пользовательские данные"
                 ],
-                "summary": "Добавить массив чисел",
+                "summary": "Добавление данных пользователя BASFI",
                 "parameters": [
                     {
                         "description": "Массив из 10 чисел",
@@ -61,9 +64,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Успешное добавление",
+                        "description": "Успешное добавление с расчетом BASFI",
                         "schema": {
-                            "$ref": "#/definitions/main.ResponseOK"
+                            "$ref": "#/definitions/main.AverageResult"
                         }
                     },
                     "400": {
@@ -80,6 +83,12 @@
         "main.AverageResult": {
             "type": "object",
             "properties": {
+                "comment": {
+                    "type": "string"
+                },
+                "date": {
+                    "type": "string"
+                },
                 "result": {
                     "type": "number"
                 }
@@ -93,19 +102,10 @@
                 }
             }
         },
-        "main.ResponseOK": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
         "main.UserData": {
             "type": "object",
             "properties": {
                 "values": {
-                    "description": "Массив из 10 значений",
                     "type": "array",
                     "items": {
                         "type": "integer"
